# nsisunz

./: CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: CI.yml
Source/: CMakeLists.txt  nsisunz.cpp
Source/minizip/: miniunz.c
Source/nsis/: pluginapi.c  pluginapi.h
